# audb

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  api-info.html  api.html  authentication.html  caching.html  changelog.html  configuration.html  contributing.html  dependencies-polars.md  dependencies.html  genindex.html  index.html  install.html  justfile  load.html  objects.inv  overview.html  publish.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  update-publish.md
.doctrees/: api-info.doctree  api.doctree  authentication.doctree  caching.doctree  changelog.doctree  configuration.doctree  contributing.doctree  dependencies.doctree  genindex.doctree  index.doctree  install.doctree  load.doctree  overview.doctree  publish.doctree  quickstart.doctree
_modules/: index.html
_sources/: api.rst.txt  authentication.rst.txt  caching.rst.txt  configuration.rst.txt  dependencies.rst.txt  index.rst.txt  install.rst.txt  load.rst.txt  publish.rst.txt  quickstart.rst.txt
api/: audb.DatabaseIterator.html  audb.Dependencies.html  audb.Flavor.html  audb.Repository.html  audb.available.html  audb.cached.html  audb.config.html  audb.default_cache_root.html  audb.dependencies.html  audb.exists.html  audb.flavor_path.html  audb.html  audb.info.attachments.html  audb.info.author.html  audb.info.bit_depths.html  audb.info.channels.html  audb.info.description.html  audb.info.duration.html  audb.info.files.html  audb.info.formats.html  audb.info.header.html  audb.info.html  audb.info.languages.html  audb.info.license.html  audb.info.license_url.html  audb.info.media.html  audb.info.meta.html  audb.info.misc_tables.html  audb.info.organization.html  audb.info.raters.html  audb.info.sampling_rates.html  audb.info.schemes.html  audb.info.source.html  audb.info.splits.html  audb.info.tables.html  audb.info.usage.html  audb.latest_version.html  audb.load.html  audb.load_attachment.html  audb.load_media.html  (+7 more)
audb/: __init__.py
audb2/: __init__.py
benchmarks/: README.md  benchmark-dependencies-methods-polars.py  benchmark-dependencies-methods.py  benchmark-dependencies-pyarrow.py  benchmark-dependencies-save-and-load.py  benchmark-dependency-methods.py  benchmark-dependency-save-and-load.py  compare_dependency_methods_polars.py  dependencies_lance.py  dependencies_polars.py  requirements.txt  utils.py
docs/: api-backend.rst  api-define.rst  api-info.rst  api.rst  authentication.rst  caching.rst  cli.rst  conf.py  configuration.rst  conftest.py  dependencies.rst  filter.rst  flavors.rst  index.rst  install.rst  load.rst  metadata.rst  overview.rst  publish.rst  quickstart.rst  requirements.txt  usage.rst
tests/: conftest.py  requirements.txt  test_api.py  test_attachments.py  test_backend.py  test_backward.py  test_cache.py  test_cli.py  test_complete_file.py  test_config.py  test_convert.py  (+16 more)
(+176 files in other folders)
