[metadata]
name = audb2
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://gitlab.audeering.com/tools/audb2
project-urls =
    Documentation = http://tools.pp.audeering.com/audb2/
description = Load databases in the Unified Format
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = audio, database, annotation
platforms= any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Researcher
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audformat >=0.9.0,<0.11.0
    audfactory >=0.6.3,<0.8.0
    audiofile >= 0.4.0,<0.6.0
    audobject >=0.4.6,<0.6.0
    audresample >=0.1.0,<0.3.0
    fire
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audb2
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
