[metadata]
name = audb
author = Johannes Wagner, Hagen Wierstorf
author-email = jwagner@audeering.com, hwierstorf@audeering.com
url = https://audeering.github.io/audb/
project-urls =
    Documentation = https://audeering.github.io/audb/
description = Load and publish databases in audformat
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = audio, data, annotation, mlops, machine learning
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audbackend >=0.3.10
    audeer >=1.14.0
    audformat >=0.12.2,<2.0.0
    audiofile >=1.0.0
    audobject >=0.4.12
    audresample >=0.1.5
    oyaml
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audb
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
